Upgrade to Micronaut 3.3.0-M1

--- a/aot.properties
+++ b/aot.properties
@@ -1,2 +1,3 @@
 # Deduces the environment at build time instead of runtime
 deduce.environment.enabled = true
+#possible.environments=test,gryffindor,slytherin,bob
